--- a/BackEnd/src/Mia.Admin.HttpApi.Host/appsettings.json
+++ b/BackEnd/src/Mia.Admin.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "mongodb://admin:123456@192.168.1.3:27017/Admin?authSource=admin"
+    "Mia": "mongodb://admin:123456@192.168.1.3:27017/Admin?authSource=admin"
   },
   "AuthServer": {
     "Authority": "https://localhost:44345",
@@ -15,5 +15,12 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "QHLcK9hbfQhNfW5R"
+  },
+  "JwtConfig": {
+    "Secret": "ProEMLh5e_QNzdNUQrqdHPgp",
+    "Issuer": "Mia.Admin",
+    "Audience": "Mia",
+    "ExpiryInMinutes": 1440,
+    "RefreshExpiryInMinutes": 43200
   }
 }
