--- a/BackEnd/src/Mia.Admin.Domain/Mia.Admin.Domain.csproj
+++ b/BackEnd/src/Mia.Admin.Domain/Mia.Admin.Domain.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Volo.Abp.Ddd.Domain" Version="7.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AggregateRoot\" />
+  </ItemGroup>
+
 </Project>
