--- a/BackEnd/src/Mia.Admin.Application.Contracts/Mia.Admin.Application.Contracts.csproj
+++ b/BackEnd/src/Mia.Admin.Application.Contracts/Mia.Admin.Application.Contracts.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>Mia.Admin</RootNamespace>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
