--- a/BackEnd/src/Mia.Admin.Application/Mia.Admin.Application.csproj
+++ b/BackEnd/src/Mia.Admin.Application/Mia.Admin.Application.csproj
@@ -15,8 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.2.2" />
+    <PackageReference Include="MiniExcel" Version="1.31.2" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="7.3.2" />
+    <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.3.2" />
   </ItemGroup>
 
 </Project>
