--- a/BackEnd/src/Mia.Admin.EntityFrameworkCore/Mia.Admin.EntityFrameworkCore.csproj
+++ b/BackEnd/src/Mia.Admin.EntityFrameworkCore/Mia.Admin.EntityFrameworkCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\common.props" />
 
@@ -10,7 +10,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Mia.Admin.Domain\Mia.Admin.Domain.csproj" />
-		<PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.2.2" />
+		<PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.3.2" />
 		<!--<PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.2.3" />
 		<PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.2.3" />
 		<PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="7.2.3" />
