--- a/BackEnd/src/Mia.Admin.HttpApi/Mia.Admin.HttpApi.csproj
+++ b/BackEnd/src/Mia.Admin.HttpApi/Mia.Admin.HttpApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\common.props" />
 
@@ -14,7 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.2.2" />		
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.3.2" />		
 	</ItemGroup>
 
 </Project>
