--- a/BackEnd/src/Mia.Admin.MongoDB/Mia.Admin.MongoDB.csproj
+++ b/BackEnd/src/Mia.Admin.MongoDB/Mia.Admin.MongoDB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.MongoDB" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.MongoDB" Version="7.3.2" />
 	<PackageReference Include="MongoDB.Driver" Version="2.20.0" />
 	<PackageReference Include="MongoDB.Driver.GridFS" Version="2.20.0" />
   </ItemGroup>
