--- a/BackEnd/test/Mia.Admin.HttpApi.Client.ConsoleTestApp/Mia.Admin.HttpApi.Client.ConsoleTestApp.csproj
+++ b/BackEnd/test/Mia.Admin.HttpApi.Client.ConsoleTestApp/Mia.Admin.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.3.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.3.2" />
   </ItemGroup>
 
   <ItemGroup>
